[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.31976, 6.21012 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1.999, 7.16274 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1.999, 7.16274 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.253106, 0.253106 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="WallOverlap" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallOverlap"]
position = Vector2( 0, -1.01216 )
shape = SubResource( 2 )

[node name="CollisionRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionRight"]
position = Vector2( 8, 0 )
shape = SubResource( 3 )

[node name="CollisionLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionLeft"]
position = Vector2( -8, 0 )
shape = SubResource( 4 )
[connection signal="area_entered" from="WallOverlap" to="." method="_on_WallOverlap_area_entered"]
[connection signal="body_entered" from="WallOverlap" to="." method="_on_WallOverlap_body_entered"]
[connection signal="body_entered" from="CollisionRight" to="." method="_on_CollisionRight_body_entered"]
[connection signal="body_exited" from="CollisionRight" to="." method="_on_CollisionRight_body_exited"]
[connection signal="body_entered" from="CollisionLeft" to="." method="_on_CollisionLeft_body_entered"]
[connection signal="body_exited" from="CollisionLeft" to="." method="_on_CollisionLeft_body_exited"]
